# tidy-downloads

./: CLAUDE.md  LICENSE  README.md  TidyDownloads_PRD.md  main.py  project_plan.md  pyproject.toml
src/tidy_downloads/: __init__.py  app.py  cli.py  config_manager.py  organizer.py  undo_manager.py
tests/: __init__.py  test_config_manager.py  test_organizer.py  test_undo_manager.py
